Fix: drawer overflow issue with scrolling(fixes #659)

--- a/less/core/drawer.less
+++ b/less/core/drawer.less
@@ -5,6 +5,7 @@
   // Update animation to be css rather than js
   height: 100%;
   width: @drawer-width;
+  overflow: hidden;
   z-index: 100;
 
   &.is-position-auto,
